docs(.env.example): update instructions

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ DATABASE_PORT=5432
 SECRET_KEY=uma_chave_secreta_bem_longa_aleatoria_1234567890
 
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
+VITE_DEBUG=True
