--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -3,6 +3,7 @@ djangorestframework
 djangorestframework-simplejwt
 djoser
 django-filter
+django-cors-headers
 psycopg[binary]
 python-dotenv
 setuptools
