--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       DATABASE_PORT: ${DATABASE_PORT}
       SECRET_KEY: ${SECRET_KEY}
       DEBUG: "False"
-      ALLOWED_HOSTS: "*"
+      ALLOWED_HOSTS: "http://localhost:3000, http://frontend:3000"
     ports:
       - "8000:8000"
     command: bash -c "./wait-for-it.sh ${DATABASE_HOST}:${DATABASE_PORT} -- python backend/setup_db.py && python backend/app/manage.py runserver 0.0.0.0:8000"
@@ -30,8 +30,8 @@ services:
       context: .
       dockerfile: frontend/Dockerfile
     environment:
-      NODE_ENV: "production"
+      NODE_ENV: production
     ports:
-      - "3000:3000"
+      - "3000:80"
 volumes:
   pgdata:
