--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,23 @@
-FROM node:22-alpine
+# Stage 1: build
+FROM node:22-alpine AS builder
 
 WORKDIR /app
 
 COPY frontend/package.json frontend/package-lock.json* ./
 RUN npm install
 
-COPY . .
+COPY frontend/. .
 
-CMD ["npm", "run", "dev"]
+RUN npm run build
+
+# Stage 2: serve
+FROM nginx:alpine
+
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Copia nginx.conf customizado (se quiser fazer fallback para SPA)
+COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
